--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -1,10 +1,10 @@
 .banner {
   width: 100%;
-  height: 100vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
     url(../components/img/background.jpg);
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
 }
 
 .icon {
@@ -32,7 +32,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 0px 50px 0px 50px;
-  position: fixed;
+  position: sticky;
   top: 0;
   z-index: 2;
 }
@@ -196,13 +196,4 @@ input[type="search"]:focus {
   to {
     transform: rotate(360deg);
   }
-}
-
-html {
-  --top-spacing: 80px;
-  scroll-padding-top: var(--top-spacing);
-}
-
-body {
-  margin: var(--top-spacing) auto;
 }
