--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -1,45 +1,97 @@
+@font-face {
+    font-family: "flower";
+    src: url('../fonts/Fowler-lW9e.ttf');
+}
+
 .title {
     padding-top: 10%;
     color: #fff;
 }
 
-.card
-{
+.titleProduct {
+    padding-top: 5%;
+    font-family: "flower";
+    font-size: 50pt;
+}
+
+.img-card {
+    height: 80%;
+    width: 60%;
+    margin-left: 5%;
+}
+
+.cardProduct {
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.2s ease-in-out;
+    box-sizing: border-box;
+    min-height: 18rem;
+    border-radius: 5%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: #FFF;
+}
+
+.cardProduct:hover {
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+
+.cardProduct>.card-inner {
+    padding: 10px;
+}
+
+.cardProduct .header h2,
+h3 {
+    margin-bottom: 0px;
+
+}
+
+.cardProduct .header {
+    margin-bottom: 5px;
+}
+
+.cardProduct img {
+    height: 80%;
+    width: 70%;
+}
+
+.cardHome {
     min-height: 15rem;
     border-radius: 2rem;
-    overflow:hidden;
+    overflow: hidden;
     position: relative;
-    
 }
-.cardText{
-    position:absolute;
-    z-index:5;
-    left:50%;
-    bottom:0%;
-    transform: translate(-50%,0%);
+
+.cardText {
+    position: absolute;
+    z-index: 5;
+    left: 50%;
+    bottom: 0%;
+    transform: translate(-50%, 0%);
     color: white;
     width: 100%;
     text-align: center;
     background-color: black;
     font-weight: 650;
     font-size: 1rem;
-    height:10%;
-    display:flex;
-    justify-content:center;
+    height: 10%;
+    display: flex;
+    justify-content: center;
     align-items: center;
 }
-img{
+
+img {
     border-radius: 2rem;
     position: absolute;
     left: 0;
     width: 100%;
-    height:100%;
-    object-fit:cover;
+    height: 100%;
+    object-fit: cover;
 }
-.background_gradient{
-    z-index:3;
-    position:absolute;
-    width:100%;
-    height:100%;
-    background:linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.3));
+
+.background_gradient {
+    z-index: 3;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
 }
