--- a/frontend/src/styles/sideBar.css
+++ b/frontend/src/styles/sideBar.css
@@ -1,11 +1,12 @@
 #sidebar {
-    z-index: 1000;
-    position: fixed;
-    left: 250px;
+    float: left;
+    /* z-index: 5; */
+    /* position: fixed; */
+    /* left: 0px; */
     width: 250px;
-    height: 100%;
-    margin-left: -250px;
+    /* margin-left: -250px; */
     overflow-y: auto;
+    height: 700vh;
     background: #37474F;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
