--- a/src/styles/sideBar.css
+++ b/src/styles/sideBar.css
@@ -1,10 +1,6 @@
 #sidebar {
     float: left;
-    /* z-index: 5; */
-    /* position: fixed; */
-    /* left: 0px; */
     width: 250px;
-    /* margin-left: -250px; */
     overflow-y: auto;
     height: 700vh;
     background: #37474F;
@@ -22,19 +18,21 @@
     text-align: center;
 }
 
-#sidebar .nav a {
+#sidebar .nav .AnchorSideBar {
     background: none;
     border-bottom: 1px solid #455A64;
     color: #CFD8DC;
     font-size: 14px;
-    padding: 16px 24px;
+    text-decoration: none;
+    padding-top: 20px;
+    padding-left: 20px;
 }
 
-#sidebar .nav a:hover {
+#sidebar .nav .AnchorSideBar:hover {
     background: none;
     color: #ECEFF1;
 }
 
-#sidebar .nav a i {
+#sidebar .nav .AnchorSideBar i {
     margin-right: 16px;
 }
