--- a/src/styles/sideBar.css
+++ b/src/styles/sideBar.css
@@ -1,5 +1,6 @@
 #sidebar {
     width: 250px;
+    background-color: whitesmoke;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -8,6 +9,7 @@
 
 #sidebar header {
     background-color: #263238;
+    width: 350px;
     color: #ffff;
     font-size: 20px;
     line-height: 52px;
@@ -39,4 +41,16 @@
 
 #sidebar .nav .AnchorSideBar i {
     margin-right: 16px;
+}
+
+.nav-item {
+    margin-left: 4%;
+    margin-bottom: 3%;
+    margin-top: 2%;
+}
+
+.nav-item:hover {
+    font-weight: bold;
+    color: orangered;
+    cursor: pointer;
 }
