--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,3 +1,7 @@
+* {
+  font-size: medium;
+}
+
 .banner {
   width: 100%;
   background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
@@ -101,7 +105,7 @@
   align-items: stretch;
 }
 
-form {
+.search-form {
   color: #555;
   display: flex;
   padding: 2px;
@@ -110,7 +114,7 @@ form {
   margin: 0 0 30px;
 }
 
-input[type="search"] {
+input[type="search-in-nav"] {
   border: none;
   background: transparent;
   margin: 0;
@@ -121,11 +125,11 @@ input[type="search"] {
   border-radius: inherit;
 }
 
-input[type="search"]::placeholder {
+input[type="search-in-nav"]::placeholder {
   color: #bbb;
 }
 
-button[type="submit"] {
+button[type="submit-in-nav"] {
   text-indent: -999px;
   overflow: hidden;
   width: 40px;
@@ -138,12 +142,12 @@ button[type="submit"] {
   opacity: 0.7;
 }
 
-button[type="submit"]:hover {
+button[type="submit-in-nav"]:hover {
   opacity: 1;
 }
 
-button[type="submit"]:focus,
-input[type="search"]:focus {
+button[type="submit-in-nav"]:focus,
+input[type="search-in-nav"]:focus {
   box-shadow: 0 0 3px 0 #1183d6;
   border-color: #1183d6;
   outline: none;
@@ -199,8 +203,8 @@ input[type="search"]:focus {
 
 .left-pan {
   padding: 0px !important;
-  width: fit-content;
-  border-right: 3px solid #263238;
+  background-color: whitesmoke;
+  margin-right: 3%;
 }
 
 .right-pan {
@@ -212,4 +216,47 @@ input[type="search"]:focus {
 .right-pan-2 {
   height: inherit;
   width: auto;
+}
+
+/*--User--*/
+.main {
+  padding: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.topbar {
+  background-color: teal;
+  overflow: hidden;
+}
+
+.topbar a {
+  float: right;
+  color: whitesmoke;
+  text-align: center;
+  padding: 20px 26px;
+  text-decoration: none;
+  font-size: 26px;
+}
+
+.col-md-3 {
+  padding-left: 30px;
+}
+
+.sidebar {
+  background-color: #333;
+  color: white;
+  height: 100%;
+}
+
+.sidebar a {
+  margin-left: 10px;
+  display: block;
+  color: white;
+  padding-bottom: 10px;
+  font-size: 30px;
+  text-decoration: none;
+}
+
+.content {
+  background-color: whitesmoke;
 }
